# captura

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  deny.toml  errors.d.ts  errors.js  errors.mjs  package-lock.json  package.json  tsconfig.json
.github/scripts/: publish-npm-tarballs.sh
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
__tests__/: installed-package-smoke.mts  integration.mts  smoke-report.mts
crates/core/: Cargo.toml
crates/core/src/: capture.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  monitor.rs
crates/interop/: Cargo.toml  index.d.ts  index.js
crates/interop/src/: error.rs  lib.rs  types.rs
crates/utils/: Cargo.toml
crates/utils/src/: encoding.rs  lib.rs
