[workspace]
members = ["crates/domain", "crates/utils", "crates/core", "crates/interop"]
# resolver = "3" is the default for edition = "2024" (requires Rust >= 1.84).
# In virtual workspaces the resolver must be explicit since there is no
# package.edition to infer it from.
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
# Minimum Supported Rust Version.
rust-version = "1.94.0"
publish = false

[workspace.dependencies]
# Internal crates
xshot-domain = { path = "crates/domain" }
xshot-utils = { path = "crates/utils" }
xshot-core = { path = "crates/core" }

# Screen capture
xcap = "0.9"

# Node.js bindings (N-API 9 — supported in Node.js >= 20.3.0)
napi = { version = "3", features = ["async", "napi9"] }
napi-derive = "3"
napi-build = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Image encoding (transitive via xcap; added directly for encoding utilities)
image = "0.25"

# Logging
log = "0.4"
