[workspace]
members = ["crates/domain", "crates/utils", "crates/core", "crates/interop"]
# resolver = "3" is the default for edition = "2024" (requires Rust >= 1.84).
# In virtual workspaces the resolver must be explicit since there is no
# package.edition to infer it from.
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
# Minimum Supported Rust Version.
rust-version = "1.94.0"
publish = false

[workspace.dependencies]
# Internal crates
xshot-domain = { path = "crates/domain" }
xshot-utils = { path = "crates/utils" }
xshot-core = { path = "crates/core" }

# Screen capture
xcap = "0.9"

# Node.js bindings (N-API 9 — supported in Node.js >= 20.3.0)
napi = { version = "3", features = ["async", "napi9"] }
napi-derive = "3"
napi-build = "2"

# Async runtime (only `rt` is needed for spawn_blocking — napi-rs manages the
# multi-thread runtime itself)
tokio = { version = "1", features = ["rt"] }

# Error handling
thiserror = "2"

# Image encoding (transitive via xcap; added directly for encoding utilities)
image = "0.25"

# Base64 encoding (RFC 4648 standard alphabet)
base64 = "0.22"

# Logging — release_max_level_off compiles all log macros to no-ops in
# --release builds, ensuring zero overhead in production.
# Source: https://docs.rs/log/0.4/log/#compile-time-filters
log = { version = "0.4", features = ["release_max_level_off"] }
