[package]
name = "captura-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Core xcap abstraction layer for captura — platform-specific capture logic"

[dependencies]
captura-domain = { workspace = true }
captura-utils = { workspace = true }
xcap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
