[package]
name = "xshot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "NAPI-rs bindings for xshot — cross-platform screen capture for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
xshot-domain = { workspace = true }
xshot-core = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
