[package]
name = "captura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "NAPI-rs bindings for captura — cross-platform screen capture for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
captura-domain = { workspace = true }
captura-core = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
