[package]
name = "captura-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared utilities for captura — encoding, error conversion, and cross-platform helpers"

[dependencies]
captura-domain = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
